fix selection in dark mode

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -66,20 +66,32 @@
 .col {
   flex: 1;
 }
-input::-moz-selection { background: transparent}
-input::selection { background: transparent }
+input.light::-moz-selection {
+  background: transparent;
+}
+input.light::selection {
+  background: transparent;
+}
+input.dark::-moz-selection {
+  background-color: transparent;
+  color: #fff
+}
+input.dark::selection {
+  background-color: transparent;
+  color: #fff
+}
 .input-container {
   display: flex;
   width: 100%;
   margin-bottom: 15px;
 }
 .clipboard {
-  margin: 7px -5%  0px;
+  margin: 7px -5% 0px;
   text-align: right;
 }
 @media (max-width: 48em) {
   .clipboard {
-    margin: 7px -10%  0px;
+    margin: 7px -10% 0px;
   }
   h1 {
     font-size: 18px;
